--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,14 @@
 
     <string name="crime_suspect_text">Choose suspect</string>
     <string name="crime_report_text">Send crime report</string>
+
+    <string name="crime_report_subject">CriminalIntent Crime Report</string>
+    <string name="crime_report">%1$s!
+        The crime was discovered on %2$s. %3$s, and %4$s
+    </string>
+    <string name="crime_report_solved">The case is solved</string>
+    <string name="crime_report_unsolved">The case is not solved</string>
+    <string name="crime_report_no_suspect">There is no suspect</string>
+
+    <string name="send_report_prompt">Send crime report via:</string>
 </resources>
