--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,14 @@
 <resources>
     <string name="app_name">CriminalIntent</string>
 
-    <string name="crime_title_hint">Enter a title for the crime.</string>
-    <string name="crime_title_label">Title</string>
-    <string name="crime_details_label">Details</string>
-    <string name="crime_solved_label">Solved</string>
+    <string name="crime_detail_title_hint">Enter a title for the crime.</string>
+    <string name="crime_detail_title_label">Title</string>
+    <string name="crime_detail_details_label">Details</string>
+    <string name="crime_detail_solved_label">Solved</string>
+    <string name="crime_detail_suspect_text">Choose suspect</string>
+    <string name="crime_detail_report_text">Send crime report</string>
+
     <string name="new_crime">New Crime</string>
-
-    <string name="crime_suspect_text">Choose suspect</string>
-    <string name="crime_report_text">Send crime report</string>
-
     <string name="crime_report_subject">CriminalIntent Crime Report</string>
     <string name="crime_report">%1$s!
         The crime was discovered on %2$s. %3$s, and %4$s
