--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,8 @@
     <string name="crime_detail_suspect_text">Choose suspect</string>
     <string name="crime_detail_report_text">Send crime report</string>
 
-    <string name="new_crime">New Crime</string>
+    <string name="toolbar_new_crime">New Crime</string>
+
     <string name="crime_report_subject">CriminalIntent Crime Report</string>
     <string name="crime_report">%1$s!
         The crime was discovered on %2$s. %3$s, and %4$s
