--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -25,4 +25,6 @@
     <string name="crime_photo_button_description">Tomar foto de la escena del crimen</string>
     <string name="crime_photo_image_description">Foto de la escena del crimen (no establecida)</string>
     <string name="crime_photo_no_image_description">Foto de la escena del crimen (establecida)</string>
+    <string name="crime_solved_description">el crimen se resuelve</string>
+    <string name="crime_not_solved_description">el crimen no se resuelve</string>
 </resources>
