--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,29 +1,28 @@
 <resources>
-    <string name="app_name">CriminalIntent</string>
+    <string name="app_name">ListBrowser</string>
 
-    <string name="crime_detail_title_hint">Enter a title for the crime.</string>
-    <string name="crime_detail_title_label">Title</string>
-    <string name="crime_detail_details_label">Details</string>
-    <string name="crime_detail_solved_label">Solved</string>
-    <string name="crime_detail_suspect_text">Choose suspect</string>
-    <string name="crime_detail_report_text">Send crime report</string>
+    <string name="fragment_crime_checkbox_solved">Solved</string>
+    <string name="fragment_crime_textv_title">Title</string>
+    <string name="fragment_crime_edittext_title">Enter a title for the crime</string>
+    <string name="fragment_crime_edittext_details">Details</string>
+    <string name="fragment_crime_save">Save</string>
+    <string name="fragment_crime_toast_deleted">Crime deleted</string>
+    <string name="fragment_crime_suspect">Choose suspect</string>
+    <string name="fragment_crime_report">Send report</string>
 
-    <string name="toolbar_new_crime">New Crime</string>
-
-    <string name="crime_report_subject">CriminalIntent Crime Report</string>
-    <string name="crime_report">%1$s!
-        The crime was discovered on %2$s. %3$s, and %4$s
+    <string name="crime_report_format">
+        %1$s!
+        The crime was discovered on %2$s. %3$s, and %4$s.
     </string>
+
     <string name="crime_report_solved">The case is solved</string>
-    <string name="crime_report_unsolved">The case is not solved</string>
-    <string name="crime_report_no_suspect">There is no suspect</string>
-    <string name="crime_report_suspect">suspect is %s.</string>
+    <string name="crime_report_subject">ListBrowser crime report</string>
+    <string name="crime_report_not_solved">The case is not solved</string>
+    <string name="crime_report_suspect">the suspect is %s</string>
+    <string name="crime_report_no_suspect">there is no suspect</string>
+    <string name="crime_report_intent_title">Send report via</string>
 
-    <string name="send_report_prompt">Send crime report via:</string>
+    <string name="menu_crime_list_new">New Crime</string>
 
-    <string name="crime_photo_button_description">Take photo of crime scene</string>
-    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
-    <string name="crime_photo_image_description">Crime scene photo (set)</string>
-    <string name="crime_solved_description">Crime is solved</string>
-    <string name="crime_not_solved_description">Crime is not solved</string>
+    <string name="menu_crime_detail_delete">Delete crime</string>
 </resources>
